<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/EditTextInput"
        android:hint="@string/hint"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="33dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/meter"
        android:id="@+id/textView2"
        android:layout_alignRight="@+id/EditTextInput"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/result"
        android:id="@+id/textViewResultLabel"
        android:layout_below="@+id/EditTextInput"
        android:layout_alignParentStart="true"
        android:layout_marginTop="38dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textViewResult"
        android:layout_alignEnd="@+id/EditTextInput"
        android:layout_alignTop="@+id/textViewResultLabel"
        android:layout_alignStart="@+id/EditTextInput" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_inch"
        android:id="@+id/buttonToInch"
        android:layout_below="@+id/textViewResultLabel"
        android:layout_alignParentStart="true"
        android:layout_marginTop="73dp"
        android:onClick="convertToInch"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_feet"
        android:id="@+id/buttonToFeets"
        android:layout_below="@+id/buttonToInch"
        android:layout_alignParentStart="true"
        android:layout_marginTop="38dp"
        android:onClick="convertToFeets"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_mile"
        android:id="@+id/buttonToMiles"
        android:layout_below="@+id/buttonToFeets"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:onClick="convertToMiles"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clr"
        android:id="@+id/buttonClearAll"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="clearAll"/>

</RelativeLayout>
